k8s/backend_loan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-loan
  labels:
    app: backend-loan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-loan
  template:
    metadata:
      labels:
        app: backend-loan
    spec:
      containers:
      - name: backend-loan
        image: 376424942400.dkr.ecr.us-east-1.amazonaws.com/tamwil-backend-loan:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-loan
spec:
  type: ClusterIP
  selector:
    app: backend-loan
  ports:
  - port: 5000
    targetPort: 5000
