k8s/backend_sip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-sip
  labels:
    app: backend-sip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-sip
  template:
    metadata:
      labels:
        app: backend-sip
    spec:
      containers:
      - name: backend-sip
        image: 376424942400.dkr.ecr.us-east-1.amazonaws.com/tamwil-backend-sip:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "250Mi"
            cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-sip
spec:
  type: ClusterIP
  selector:
    app: backend-sip
  ports:
  - port: 5000
    targetPort: 5000
