k8s/frontend-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-proxy
  labels:
    app: frontend-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-proxy
  template:
    metadata:
      labels:
        app: frontend-proxy
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: frontend-proxy
        image: 376424942400.dkr.ecr.us-east-1.amazonaws.com/tamwil-frontend-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          hostPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
spec:
  type: LoadBalancer
  selector:
    app: frontend-proxy
  ports:
  - port: 80
    targetPort: 80
